--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -21,7 +21,63 @@ li {
   /* padding: 1rem; */
 }
 
+.mobile-menu {
+  display: none;
+}
+
 @media screen and (max-width: 940px) {
+
+  .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    top: -100vh;
+    left: 0;
+    position: absolute;
+    justify-content: space-between;
+    /* align-items: center; */
+    /* color: rgba(255, 255, 255, 0.95); */
+    background-color: whitesmoke;
+    transition: 0.3s;
+  }
+
+  .active {
+    top: 80px;
+  }
+
+  .mobile-menu li {
+    padding: 1.2rem 1rem;
+    margin: 0 1rem;
+    border-bottom: 1px solid lightgrey;
+  }
+
+  .mobile-nav {
+    margin: 1rem 0;
+  }
+
+  .mobile-menu-bottom {
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+  }
+
+  .social-icons {
+    display: flex;
+    justify-content: space-around;
+    margin: 2rem 0;
+  }
+
+  .social-icons .icon:hover {
+    transform: scale(1.5);
+    transition: 0.3s;
+  }
+
+  .mobile-menu button {
+    margin: 1rem;
+    width: 90%;
+    background-color: dodgerblue;
+  }
+
   .nav-menu {
     display: none;
   }
