--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -20,3 +20,35 @@
   object-fit: cover;
   z-index: -1;
 }
+
+.hero .content {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  margin: auto;
+  padding: 1rem;
+}
+
+.search-button {
+  background-color: dodgerblue;
+}
+
+.form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffffcc;
+  color: black;
+  border: 1px solid #ccc;
+  padding: 2px;
+  border-radius: 8px;
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
+}
