--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -48,7 +48,13 @@
   padding: 2px;
   border-radius: 8px;
   max-width: 700px;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   margin-top: 10px;
+}
+
+.form input[type=text] {
+  border: transparent;
+  background-color: transparent;
+  font-size: 20px;
 }
