Make search button and mobile menu buttons same colour

--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -89,7 +89,7 @@ li {
   .mobile-menu button {
     margin: 1rem;
     width: 90%;
-    background-color: dodgerblue;
+    background-color: rgb(97, 161, 200);
   }
 
   .nav-menu {
