--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -35,7 +35,7 @@
 }
 
 .search-button {
-  background-color: dodgerblue;
+  background-color: rgb(97, 161, 200);
 }
 
 .form {
@@ -48,7 +48,7 @@
   padding: 2px;
   border-radius: 8px;
   max-width: 700px;
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 10px;
 }
@@ -56,7 +56,6 @@
 .form input[type=text] {
   border: transparent;
   background-color: transparent;
-  /* width: 400px; */
   font-size: 1.2rem;
   font-family: 'Poppins', sans-serif;
 }
