--- a/src/components/destinations/DestinationsStyle.css
+++ b/src/components/destinations/DestinationsStyle.css
@@ -25,3 +25,23 @@
   height: 100%;
   object-fit: cover;
 }
+
+.span-3 {
+  grid-column: span 3;
+}
+
+.image-grid-row-2 {
+  grid-row: span 2;
+}
+
+@media screen and (max-width: 940px) {
+  .img-container {
+    --num-cols: 2;
+    --row-height: 200px;
+    --gap: 0.5rem;
+  }
+
+  .span-3 {
+    grid-column: span 2;
+  }
+}
