--- a/src/components/search/SearchStyle.css
+++ b/src/components/search/SearchStyle.css
@@ -1,3 +1,23 @@
 button {
-  background-color: rgb(97, 161, 200);
+  background-color: rgb(94, 143, 228);
+}
+
+.search {
+  width: 100%;
+  padding: 3rem 0;
+}
+
+.search .container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 2rem;
+  padding: 0 3rem;
+}
+
+.search-col-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2rem 0;
+  justify-content: center;
+  align-items: center;
 }
